objects/Competitor_Project__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Business_Partners__c</fullName>
        <inlineHelpText>You can list out any additional Partners that were involved in this Project.</inlineHelpText>
        <label>Additional Business Partners</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Supplier_or_Equipment_Info__c</fullName>
        <label>Additional Supplier or Equipment Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COD_Date__c</fullName>
        <label>COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Projects (Developer)</relationshipLabel>
        <relationshipName>Competitor_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Projects (EPC)</relationshipLabel>
        <relationshipName>Competitor_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Projects (Financier)</relationshipLabel>
        <relationshipName>Competitor_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Supplier__c</fullName>
        <label>Inverter Supplier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Amount__c</fullName>
        <inlineHelpText>The Total Value of the Project</inlineHelpText>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Module_Supplier__c</fullName>
        <label>Module Supplier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Projects</relationshipLabel>
        <relationshipName>Competitor_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_Purchaser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Power Purchaser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Projects (Power Purchaser)</relationshipLabel>
        <relationshipName>Competitor_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_MW__c</fullName>
        <label>Size MW</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Installation_Type__c</fullName>
        <label>Solar Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Carport</fullName>
                </value>
                <value>
                    <fullName>Ground-Mount</fullName>
                </value>
                <value>
                    <fullName>Rooftop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <label>Technology Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DR - Reactive</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
                <value>
                    <fullName>Microgrid</fullName>
                </value>
                <value>
                    <fullName>Offshore - Wind</fullName>
                </value>
                <value>
                    <fullName>Onshore - Wind</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Solar_PV</fullName>
                    <label>Solar PV</label>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracker_Mount_Suppliers__c</fullName>
        <label>Tracker/Mount Suppliers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Turbine_Supplier__c</fullName>
        <label>Turbine Supplier</label>
        <type>TextArea</type>
    </fields>
    <label>Competitor Project</label>
    <nameField>
        <label>Competitor Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>